--- a/assets/styles.css
+++ b/assets/styles.css
@@ -44,11 +44,14 @@ nav{
   border: 1px solid black;
   margin: 1rem;
   padding: 1rem;
+  background-color: rgb(181, 206, 230);
 }
 
 .actDiv{
   border: 1px solid black;
   padding: 1rem;
+  margin-bottom: 2px;
+  background-color: rgb(249, 178, 152);
 }
 
 .doubleInd {
